# GPLconx -- visualize 2-D hyperbolic geometry.
# Copyright (C) 1996-2001  David L. Chandler

# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.4 foreign

noinst_LTLIBRARIES = libtogl.la

libtogl_la_SOURCES = togl.c

noinst_HEADERS = togl.h \
                 tkInt4.0.h \
                 tkInt4.1.h \
                 tkInt4.2.h \
                 tkInt8.0.h \
                 tkInt8.0p2.h \
                 tkInt8.0.3.h \
                 tkInt8.0p5.h \
                 tkInt8.1.1.h \
                 tkInt8.2.1.h \
                 tkInt8.3.2.h \
                 tkInt8.4a2.h \
                 tkIntDecls8.1.1.h \
                 tkIntDecls8.2.1.h \
                 tkIntDecls8.3.2.h \
                 tkIntDecls8.4a2.h

EXTRA_DIST = LICENSE README
