# GPLconx -- visualize 2-D hyperbolic geometry.
# Copyright (C) 1996-2001  David L. Chandler

# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.4 foreign

pkgdata_DATA = tconx_a.tcl tconxt.ui.tcl tconx_b.tcl simple.ui.tcl tconx.tcl \
               tconx_d.tcl tconx_l.tcl tconx_m.tcl slider.ui.tcl tconx_s.tcl \
               tconx_w.tcl tconx_h.tcl tconx_p.tcl text.ui.tcl tconx_t.tcl \
               tconx_u.tcl
EXTRA_DIST = tconxt.ui simple.ui slider.ui text.ui $(pkgdata_DATA)
